# Super-CHIP8-Rust

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  README.txt  core.rs  core_tests.rs  graphics.rs  graphics_sdl.rs  io.rs  main.rs
core/: core_tests.rs  graphics.rs  graphics_sdl.rs  io.rs  mod.rs  sdl_io.rs
core/tests/: core_tests.rs
src/: main.rs
src/system/: mod.rs
src/system/graphics/: graphics_sdl.rs  mod.rs
src/system/io/: mod.rs  sdl_io.rs
